Each entry in the chat log is now its own HTML element.
The full message data including author and message-id is now retained.

--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -90,11 +90,12 @@ textarea {
 	resize: none;
 }
 
-textarea#received {
+ul#received {
 	height: 100%;
   width: 100%;
 	background-color: #fff;
-	overflow: hidden;
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
 
 textarea#chat-input {
