When a new message enters the system, the log is automatically scrolling to it.

--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -96,6 +96,7 @@ ul#received {
 	background-color: #fff;
 	overflow-y: scroll;
 	overflow-x: hidden;
+	scroll-behaviour: smooth;
 }
 
 textarea#chat-input {
