--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -31,6 +31,10 @@ html, div#app {
 	height: 100%;
 }
 
+div#app {
+	display: flex;
+}
+
 body {
 	font-family: 'Helvetica Neue', Verdana, Helvetica, Arial, sans-serif;
 	color: #333;
@@ -84,6 +88,7 @@ div#chat {
 	display: flex;
 	flex-direction: column;
   height: 100%;
+	width: 100%;
 }
 
 textarea {
@@ -105,4 +110,15 @@ textarea#chat-input {
 	width: 100%;
 	border: 0;
 	min-height: 1.5em;
+}
+
+#loading-message {
+	margin: auto;
+}
+
+.backlog {
+	color: grey;
+}
+.acked {
+	background-color: #dfd;
 }
