--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -105,11 +105,17 @@ ul#received {
 }
 
 textarea#chat-input {
+	-webkit-appearance: none;
 	box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
 	box-sizing: border-box;
 	width: 100%;
 	border: 0;
 	min-height: 1.5em;
+}
+
+.chat-log-entry {
+		padding: 1.5em;
+		background-color: #fee;
 }
 
 #loading-message {
